# Order-Matching-Engine

./: .gitignore  CMakeLists.txt  LOB_with_improvements.txt  README.md
benchmarks/: latency_benchmark.cpp  throughput_benchmark.cpp
docs/: ARCHITECTURE.md  BENCHMARKING.md  OPTIMIZATION_RESULTS.md
include/lob/: matching_engine_runtime.hpp  order_book.hpp  types.hpp
src/: main.cpp  matching_engine_runtime.cpp  order_book.cpp
tests/: order_book_tests.cpp  runtime_tests.cpp
